--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Redirecting...</title>
+  <title>Kalam Pakistan</title>
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BV56D5Z25F"></script>
@@ -24,3 +24,4 @@
   <p>Redirecting…</p>
 </body>
 </html>
+
